# msww-sessionlogging

./: .gitignore  LICENSE.txt  README.md  changelog.md  example.py  pyproject.toml
.github/workflows/: test.yml
src/sessionlogging/: __init__.py  sessionlogging.py
tests/: test_sessionlogging.py
